--- a/views/product.ejs
+++ b/views/product.ejs
@@ -2,18 +2,55 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <title><%= product.name %> - Szczegóły</title>
+    <title><%= product ? product.name + ' - Szczegóły' : 'Produkt nie znaleziony' %></title>
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <main>
-      <%- include('partials/navigation', { menuLinks: menuLinks, activeLinkPath:
-      activeLinkPath, cartCount: cartCount }); %>
-      <h1 class="heading"><%= product.name %></h1>
-      <div><%= product.description %></div>
-      <button onclick="deleteProduct('<%= product.name %>')">Delete</button>
+      <%- include('partials/navigation', { menuLinks: menuLinks, activeLinkPath: activeLinkPath, cartCount: cartCount }); %>
+
+      <% if (product) { %>
+        <div class="product">
+          <h1 class="product__title"><%= product.name %></h1>
+          <p class="product__description"><%= product.description %></p>
+          <p class="product__price"><%= product.price %> PLN</p>
+
+          <button
+            class="product__button product__button--add"
+            onclick="addToCart('<%= product.name %>')"
+          >
+            Add to Cart
+          </button>
+
+          <button
+            class="product__button product__button--delete"
+            onclick="deleteProduct('<%= product.name %>')"
+          >
+            Delete Product
+          </button>
+        </div>
+      <% } else { %>
+        <p>Produkt nie został znaleziony.</p>
+      <% } %>
     </main>
+
     <script>
+      function addToCart(name) {
+        fetch("/cart/add", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({ name }),
+        }).then((response) => {
+          if (response.ok) {
+            window.location.reload();
+          } else {
+            alert("Failed to add to cart.");
+          }
+        });
+      }
+
       function deleteProduct(name) {
         if (!confirm(`Are you sure you want to remove ${name}?`)) {
           return;
@@ -23,7 +60,7 @@
           method: "DELETE",
         }).then((response) => {
           if (response.ok) {
-            window.location.reload();
+            window.location.href = "/products";
           } else {
             alert("Error while removing product.");
           }
